GNOME Bugzilla – Bug 778782
check for uninitialized variables
Last modified: 2017-02-22 04:27:50 UTC
Josep Torra mentioned me he is getting some compiler complains regarding this. Though I cannot replicate them in my setup, it looks like the code can be enhanced a little bit there.
Created attachment 345981 [details] [review] libs: decoder: h264,h265 avoid uninitialized variable Configuring GCC to verify possible usage of uninitialized variables, shows that found_index might be used without previous assignation. This patch assigns a initial value to found_index, also avoid a branching when returning the result value.
Created attachment 346027 [details] [review] libs: encoder: h265: bail if nal unit type fails Bail out if the NAL unit type is not recognized.
Both looks good to me and solve all the building issues I was having. Ship it :) and thanks for looking into them.
Attachment 345981 [details] pushed as d6738f3 - libs: decoder: h264,h265 avoid uninitialized variable Attachment 346027 [details] pushed as 7b3a51f - libs: encoder: h265: bail if nal unit type fails